k8s/services/minecraft/extra/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-all
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-minecraft
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
            - port: "25566"
              protocol: TCP
